@@ -1,3 +1,12 @@
+#
+# All changes require plugin restart
+#
 # announce interval in seconds
 # minimum 900 (15 minutes), maximum 21600 (6 hours)
 interval=1620
+#
+showfoooter=true
+#footerText=your html text here
+#
+# default false as of 0.0.19
+#allowFullScrape=false
